--- a/src/Pages/mihyungim/Main/Main.scss
+++ b/src/Pages/mihyungim/Main/Main.scss
@@ -1,21 +1,14 @@
 
-
-
-/* 전체 */
-
 a {
     text-decoration: none;
 }
-
-/* 헤더 */
 
 body {
     position: relative;
 }
 
-.maincomponent {
+.mainComponent {
     header {
-        /* border-bottom: 1px solid rgb(255,255,255); */
         position: fixed;
         top: 0;
         left: 0;
@@ -77,8 +70,6 @@ body {
         }
     }
 
-    /* 메인 */
-
     main {
         position: relative;
         margin-top: 52px;
@@ -93,16 +84,13 @@ body {
             box-sizing: border-box;
             position: relative;
             display: flex;
-            /*  */
             height: 1000px;
 
             .contents__all {
                 background: #fafafa;
-                /* background: rgb(250,250,250); */
                 width: 65%;
                 margin-right: 5%;
 
-                /* <!-- 메인섹션 왼쪽 상단  --> */
                 .contents__up {
                     padding: 10px 0;
                     margin-bottom: 30px;
