메인페이지 댓글기능구현(미션3)

--- a/src/Pages/sunghoonbae/Login/Login.scss
+++ b/src/Pages/sunghoonbae/Login/Login.scss
@@ -1,9 +1,9 @@
-body {
+.main__body {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background-color: #fafafa;
   }
   
