--- a/src/Pages/jieunyang/Login/Login.scss
+++ b/src/Pages/jieunyang/Login/Login.scss
@@ -1,159 +1,163 @@
+$theme_color: white;
+$theme_backgroundColor: lightskyblue;
+$border_style: 1px solid lightgray;
+
 #wrap_main {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100vh;
-}
 
-.container {
-  width: 350px;
-  height: 400px;
-  border: 1px solid lightgray;
-}
+  .container {
+    width: 350px;
+    height: 400px;
+    border: $border_style;
 
-.westagram {
-  font-family: "Lobster", cursive;
-  text-align: center;
-  font-size: 45px;
-  margin: 40px;
-}
+    .westagram {
+      font-family: "Lobster", cursive;
+      text-align: center;
+      font-size: 45px;
+      margin: 40px;
+    }
 
-.mainlayout {
-  display: flex;
-  flex-direction: column;
-}
+    .mainlayout {
+      display: flex;
+      flex-direction: column;
 
-.inputs {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+      .inputs {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-#id,
-#password {
-  width: 250px;
-  height: 30px;
-  margin: 3px;
-  padding: 3px;
-  padding-left: 8px;
-  font-size: 11px;
-  border: 1px solid lightgray;
-  border-radius: 3px;
-}
+        #id,
+        #password {
+          width: 250px;
+          height: 30px;
+          margin: 3px;
+          padding: 3px;
+          padding-left: 8px;
+          font-size: 11px;
+          border: $border_style;
+          border-radius: 3px;
+        }
+      }
 
-.btn_container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
+      .btn_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
 
-.btn {
-  width: 260px;
-  height: 32px;
-  margin: 15px;
-  background-color: lightskyblue;
-  color: white;
-  font-weight: bold;
-  font-size: 14px;
-  border: 0;
-  border-radius: 3px;
-}
+        .btn {
+          width: 260px;
+          height: 32px;
+          margin: 15px;
+          background-color: $theme_backgroundColor;
+          color: $theme_color;
+          font-weight: bold;
+          font-size: 14px;
+          border: 0;
+          border-radius: 3px;
+        }
 
-.trueColor {
-  background-color:#1565c0;
-}
+        .trueColor {
+          background-color: #1565c0;
+        }
 
-.falseColor {
-  background-color: lightskyblue;
-}
+        .falseColor {
+          background-color: $theme_backgroundColor;
+        }
+      }
 
-.divider {
-  display: flex;
-  flex-direction: low;
-  justify-content: center;
-  margin-top: 10px;
-}
+      .divider {
+        display: flex;
+        flex-direction: low;
+        justify-content: center;
+        margin-top: 10px;
 
-.line_l {
-  width: 95px;
-  margin-top: 5px;
-  margin-bottom: 20px;
-  border: 0.5px solid lightgray;
-}
+        .line_l {
+          width: 95px;
+          margin-top: 5px;
+          margin-bottom: 20px;
+          border: 0.5px solid lightgray;
+        }
 
-.centerchar {
-  color: lightslategray;
-  margin-left: 20px;
-  margin-right: 20px;
-  font-size: 13px;
-  font-weight: bold;
-}
+        .centerchar {
+          color: lightslategray;
+          margin-left: 20px;
+          margin-right: 20px;
+          font-size: 13px;
+          font-weight: bold;
+        }
 
-.line_r {
-  width: 95px;
-  margin-top: 5px;
-  margin-bottom: 20px;
-  border: 0.5px solid lightgray;
-}
+        .line_r {
+          width: 95px;
+          margin-top: 5px;
+          margin-bottom: 20px;
+          border: 0.5px solid lightgray;
+        }
+      }
 
-.facebook {
-  display: flex;
-  justify-content: center;
-  margin-top: 15px;
-  margin-bottom: 15px;
-}
+      .facebook {
+        display: flex;
+        justify-content: center;
+        margin-top: 15px;
+        margin-bottom: 15px;
 
-.fa-facebook-square {
-  width: 15px;
-  height: 15px;
-}
+        .btn_fb {
+          width: 50%;
+          cursor: pointer;
+          background-color: $theme_color;
+          color: navy;
+          border: 0;
+          font-weight: bold;
+        }
 
-.btn_fb {
-  width: 50%;
-  cursor: pointer;
-  background-color: white;
-  color: navy;
-  border: 0;
-  font-weight: bold;
-}
+        .fa-facebook-square {
+          width: 15px;
+          height: 15px;
+        }
+      }
 
-.password_container {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 15px;
-}
+      .password_container {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 15px;
 
-.btn_password {
-  cursor: pointer;
-  background-color: white;
-  border: 0;
-  font-size: 12px;
-}
+        .btn_password {
+          cursor: pointer;
+          background-color: $theme_color;
+          border: 0;
+          font-size: 12px;
+        }
+      }
 
-.joinform {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 60px;
-  margin-top: 22px;
-  border: 1px solid lightgray;
-}
+      .joinform {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        height: 60px;
+        margin-top: 22px;
+        border: $border_style;
 
-.join {
-  display: flex;
-  align-items: center;
-  padding: 5px;
-  font-size: 14px;
-}
+        .join {
+          display: flex;
+          align-items: center;
+          padding: 5px;
+          font-size: 14px;
+        }
 
-.btn_join {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  background-color: white;
-  color: blue;
-  padding: 5px;
-  border: 0;
-  font-weight: bold;
+        .btn_join {
+          display: flex;
+          align-items: center;
+          cursor: pointer;
+          background-color: $theme_color;
+          color: blue;
+          padding: 5px;
+          border: 0;
+          font-weight: bold;
+        }
+      }
+    }
+  }
 }
