--- a/src/Pages/daeheelee/Main/Main.scss
+++ b/src/Pages/daeheelee/Main/Main.scss
@@ -1,5 +1,6 @@
-@import "Reset.css";
-.instamain {
+@import "../../../Styles/reset.scss";
+
+.instaMain {
   .instamain {
     display: flex;
     justify-content: center;
@@ -126,19 +127,18 @@
     margin: 0 20px;
   }
 
-  .textremove {
+  .textRemove {
     position: absolute;
     right: 30px;
-  }
-
-  .textremove {
+    position: absolute;
+    right: 30px;
     border: none;
     background-color: white;
     color: rgb(219, 219, 219);
     outline: none;
   }
 
-  .textremove:hover {
+  .textRemove:hover {
     color: rgb(58, 58, 58);
   }
 
