--- a/src/Pages/jieunyang/Main/Main.scss
+++ b/src/Pages/jieunyang/Main/Main.scss
@@ -119,23 +119,22 @@ body {
         justify-content: space-around;
 
         .icons2 {
-          margin-right: 450px;
+          margin-right: 470px;
 
           .fa-grin-hearts,
           .fa-comment-dots,
-          .fa-paper-plane,
-          .fa-bookmark {
+          .fa-paper-plane {
             font-size: 25px;
             margin-top: 5px;
-            margin-left: 7px;
+            margin-left: 5px;
           }
           .fa-grin-hearts {
             cursor: pointer;
           }
-
-          .fa-bookmark {
-            margin-right: 10px;
-          }
+        }
+        .fa-bookmark {
+          font-size: 25px;
+          margin-top: 5px;
         }
       }
 
@@ -185,13 +184,10 @@ body {
         margin-top: 10px;
         border-top: 0.5px solid lightgray;
 
-        .comment_box {
-          margin-top: 10px;
-        }
-
         .fa-smile {
+          position: relative;
+          top: 5px;
           font-size: 23px;
-          padding-top: 10px;
         }
 
         .input_comment {
@@ -200,6 +196,7 @@ body {
           font-size: 14px;
           margin-left: 5px;
           border: 0;
+          outline: none;
         }
 
         .enter {
@@ -207,7 +204,8 @@ body {
           color: lightskyblue;
           font-size: 15px;
           font-weight: bold;
-          border: none;
+          border: 0;
+          outline: none;
         }
       }
     }
