Refactor: 리뷰 수정 일부 완료

--- a/src/Pages/daeheelee/Login/Login.scss
+++ b/src/Pages/daeheelee/Login/Login.scss
@@ -58,6 +58,10 @@
     background-color: rgb(255, 255, 255);
     border: solid 1px rgb(219, 219, 219);
     text-align: center;
+
+    .logo {
+      font-size: 48px;
+    }
   }
 
   .logo {
