--- a/src/Pages/daeheelee/Main/Main.scss
+++ b/src/Pages/daeheelee/Main/Main.scss
@@ -1,5 +1,3 @@
-@import "../../../Styles/reset.scss";
-
 .instaMain {
   .instamain {
     display: flex;
@@ -65,6 +63,10 @@
 
   .header2 {
     margin-top: 10px;
+
+    .header2MainName {
+      font-weight: 800;
+    }
   }
 
   .dotIcon {
@@ -108,6 +110,7 @@
     position: relative;
     margin-left: 20px;
     top: -10px;
+    font-weight: 800;
   }
 
   .text {
