Refector: 멘토 리뷰 수정, 반응형 추가

--- a/src/Pages/daeheelee/Login/Login.scss
+++ b/src/Pages/daeheelee/Login/Login.scss
@@ -198,4 +198,13 @@
   .bluecolor {
     background-color: blue;
   }
+  @media screen and (max-width: 785px) {
+    .left {
+      display: none;
+    }
+    .main {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
