--- a/src/Pages/daeheelee/Login/Login.scss
+++ b/src/Pages/daeheelee/Login/Login.scss
@@ -1,5 +1,15 @@
 @import "../../../Styles/reset.scss";
 
+// @media screen and (max-width: 785px) {
+//   .left {
+//     display: none;
+//   }
+//   .right {
+//     display: flex;
+//     justify-content: center;
+//   }
+// }
+
 .loginBody {
   margin-top: -15px;
   background-color: rgb(250, 250, 250);
@@ -9,24 +19,24 @@
     justify-content: center;
     align-items: center;
     height: 85vh;
-  }
 
-  .main {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    height: 600px;
-    width: 780px;
-  }
+    .main {
+      display: flex;
+      justify-content: space-between;
+      position: relative;
+      height: 600px;
+      width: 780px;
 
-  .left {
-    height: 600px;
-    width: 420px;
-  }
+      .left {
+        height: 600px;
+        width: 420px;
 
-  .left img {
-    height: 590px;
-    width: 380px;
+        img {
+          height: 590px;
+          width: 380px;
+        }
+      }
+    }
   }
 
   .right {
@@ -34,53 +44,37 @@
     flex-direction: column;
     margin: 15px 0px;
     width: 380px;
-  }
 
-  #id,
-  #pw {
-    display: block;
-    margin: 0 auto;
-  }
+    .rightBox1 {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 99.5%;
+      height: 100%;
+      background-color: rgb(255, 255, 255);
+      border: solid 1px rgb(219, 219, 219);
+      text-align: center;
 
-  .rightbox1 img {
-    display: relative;
-    top: 10px;
-    height: 100px;
-    width: 200px;
-  }
+      .logo {
+        font-size: 48px;
+        font-family: "Lobster", cursive;
+      }
 
-  .rightBox1 {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    width: 99.5%;
-    height: 100%;
-    background-color: rgb(255, 255, 255);
-    border: solid 1px rgb(219, 219, 219);
-    text-align: center;
+      input {
+        width: 270px;
+        height: 35px;
+        padding-left: 5px;
+        background-color: rgb(250, 250, 250);
+        border: solid 1px rgb(219, 219, 219);
+        border-radius: 3px;
+        font-size: 12px;
+        outline: none;
+      }
 
-    .logo {
-      font-size: 48px;
+      .id {
+        margin-bottom: 5px;
+      }
     }
-  }
-
-  .logo {
-    font-family: "Lobster", cursive;
-  }
-
-  input {
-    width: 270px;
-    height: 35px;
-    padding-left: 5px;
-    background-color: rgb(250, 250, 250);
-    border: solid 1px rgb(219, 219, 219);
-    border-radius: 3px;
-    font-size: 12px;
-    outline: none;
-  }
-
-  input.id {
-    margin-bottom: 5px;
   }
 
   button {
@@ -95,10 +89,6 @@
     outline: none;
   }
 
-  .loginText1 {
-    color: rgb(179, 179, 179);
-  }
-
   .loginText3 {
     color: rgb(56, 81, 133);
     font-size: 13px;
@@ -110,13 +100,17 @@
     width: 270px;
     height: 20px;
     margin: 0 auto;
-  }
 
-  .or1,
-  .or2 {
-    width: 100px;
-    height: 10px;
-    border-bottom: solid 1px rgb(219, 219, 219);
+    .loginText1 {
+      color: rgb(179, 179, 179);
+    }
+
+    .or1,
+    .or2 {
+      width: 100px;
+      height: 10px;
+      border-bottom: solid 1px rgb(219, 219, 219);
+    }
   }
 
   .loginText2 {
@@ -131,59 +125,59 @@
     background-color: rgb(255, 255, 255);
     font-size: 15px;
     font-weight: 400;
-  }
 
-  .rightBox3 img {
-    width: 270px;
-    height: 40px;
-  }
-
-  .join {
-    color: rgb(90, 178, 212);
+    .join {
+      color: rgb(90, 178, 212);
+    }
   }
 
   .rightBox3 {
     margin: 0 auto;
     font-size: 14px;
-  }
 
-  .rightbox3_p {
-    margin-bottom: 15px;
-    text-align: center;
+    .rightbox3_p {
+      margin-bottom: 15px;
+      text-align: center;
+    }
+
+    img {
+      width: 270px;
+      height: 40px;
+    }
   }
 
   footer {
     height: 15vh;
-  }
 
-  ul {
-    list-style: none;
-  }
+    ul {
+      list-style: none;
 
-  li {
-    margin: 0px 7px;
-    color: rgb(175, 175, 175);
-    font-size: 12px;
-  }
+      li {
+        margin: 0px 7px;
+        color: rgb(175, 175, 175);
+        font-size: 12px;
+      }
+    }
 
-  .line1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 20px auto 5px auto;
-  }
+    .line1 {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      margin: 20px auto 5px auto;
+    }
 
-  .line2 {
-    display: flex;
-    justify-content: center;
-    margin: 7px auto 5px auto;
-  }
+    .line2 {
+      display: flex;
+      justify-content: center;
+      margin: 7px auto 5px auto;
+    }
 
-  .line3 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    margin: 15px auto 5px;
+    .line3 {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      margin: 15px auto 5px;
+    }
   }
 
   .facebook {
@@ -198,13 +192,12 @@
   .bluecolor {
     background-color: blue;
   }
-  @media screen and (max-width: 785px) {
-    .left {
-      display: none;
-    }
-    .main {
-      display: flex;
-      justify-content: center;
-    }
+}
+@media screen and (max-width: 785px) {
+  .left {
+    display: none;
+  }
+  .main {
+    margin: 180px;
   }
 }
