하트 및 북마크 클릭 시 색 변환

--- a/src/Pages/junwookang/Login/Login.scss
+++ b/src/Pages/junwookang/Login/Login.scss
@@ -33,6 +33,7 @@
         width: 270px;
         height: 40px;
         border: 1px solid #dbdbdb;
+        outline-color: #8e8e9d;
         border-radius: 5px;
         font-size: 12px;
       }
