--- a/src/Pages/junwookang/Main/Article/Article.scss
+++ b/src/Pages/junwookang/Main/Article/Article.scss
@@ -132,6 +132,7 @@ main {
             button {
               position: absolute;
               border: none;
+              outline-color: #fafafa;
               background-color: rgba(250, 250, 250, 0);
               right: 10px;
               top: 1px;
@@ -156,16 +157,42 @@ main {
             width: 110px;
             display: flex;
             margin-left: 10px;
+
+            .change {
+              color: red;
+            }
+
+            .unchange {
+              color: #b9babc;
+            }
           }
 
           .icon-right {
-            width: 110px;
             display: flex;
-            flex-direction: row-reverse;
+            margin: 0;
+            width: 110px;
             margin-right: 10px;
 
-            .fa-bookmark {
-              margin: 0;
+            .change2 {
+              width: 110px;
+              color: black;
+              display: flex;
+              flex-flow: row-reverse;
+
+              .fa-bookmark {
+                margin: 0;
+              }
+            }
+
+            .unchange2 {
+              width: 110px;
+              color: #b9babc;
+              display: flex;
+              flex-flow: row-reverse;
+
+              .fa-bookmark {
+                margin: 0;
+              }
             }
           }
         }
@@ -201,6 +228,7 @@ main {
             width: 40px;
             border: none;
             color: white;
+            outline: none;
           }
 
           .fa-smile {
@@ -217,6 +245,7 @@ main {
 
           input {
             border: none;
+            outline-color: #fafafa;
             width: 200px;
             font-size: 16px;
           }
@@ -229,9 +258,10 @@ main {
           align-items: center;
 
           button {
-            background-color: white;
+            background-color: #fafafa;
             color: rgb(183, 225, 253);
             border: none;
+            outline-color: #fafafa;
             font-size: 16px;
             font-weight: bold;
           }
